--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/material": "^5.14.20",
     "next": "^12.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.10.3",
     "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
+    "@types/uuid": "^9.0.7",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.3",
     "typescript": "5.3.2"
