--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
     "mongoose": "^8.0.2",
     "next": "^12.3.4",
     "react": "18.2.0",
