--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "mongoose": "^8.0.2",
     "next": "^12.3.4",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.1"
